# openclaw-roborock-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  config.example.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ADB_EXTRACTION.md  CAMERA.md  OPENCLAW_SKILL.md  PROTOCOL.md
roborock_cli/: __init__.py  adb.py  auth.py  camera.py  cli.py  commands.py  config.py  map.py  mqtt.py  rooms.py  telegram_bot.py
tests/: test_adb.py  test_cli.py  test_commands.py  test_config.py  test_rooms.py
