[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roborock-cloud-cli"
version = "0.1.0"
description = "Control your Roborock vacuum from the terminal — no app needed"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MOZARTINOS"},
]
keywords = ["roborock", "vacuum", "smart-home", "cli", "mqtt", "iot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "python-roborock>=4.17.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
camera = ["aiortc>=1.9.0", "av>=12.0.0"]
all = ["python-telegram-bot>=21.0", "aiortc>=1.9.0", "av>=12.0.0"]

[project.urls]
Homepage = "https://github.com/MOZARTINOS/OpenClaw-Roborock"
Issues = "https://github.com/MOZARTINOS/OpenClaw-Roborock/issues"

[project.scripts]
roborock-cli = "roborock_cli.cli:main"
